# brutefir

./: CMakeLists.txt  FreeBSD.md  Makefile
freebsd/: OSS_MODULE_FIXES.md  brutefir.conf  brutefir_defaults  brutefir_defaults.in  brutefir_passthrough.conf
freebsd/rc.d/: brutefir_loopback
src/: bfio_oss.c  bfio_pipewire.c  compat.c  compat.h  shmalloc.c
